--- a/layouts/stories/single.html
+++ b/layouts/stories/single.html
@@ -10,7 +10,7 @@
         <p class="text-xl text-gray-600">{{ . }}</p>
       {{ end }}
       {{ with .Params.translators }}
-        <p class="text-lg text-gray-500 italic mt-2">
+        <p class="text-lg text-gray-500 mt-2" style="font-style: italic;">
           Translated by: {{ delimit . ", " }}
         </p>
       {{ end }}
