--- a/layouts/stories/single.html
+++ b/layouts/stories/single.html
@@ -13,14 +13,14 @@
           <!-- English Description -->
           {{ with .Params.descriptions.english }}
             <div class="bg-blue-50 border-l-4 border-blue-500 p-4 rounded-r-lg">
-              <p class="text-lg text-gray-700">{{ . }}</p>
+              <p class="text-lg text-gray-700 text-left">{{ . }}</p>
             </div>
           {{ end }}
 
           <!-- Tamil Description -->
           {{ with .Params.descriptions.tamil }}
             <div class="bg-orange-50 border-l-4 border-orange-500 p-4 rounded-r-lg">
-              <p class="text-lg text-gray-700">{{ . }}</p>
+              <p class="text-lg text-gray-700 text-left">{{ . }}</p>
             </div>
           {{ end }}
         </div>
@@ -32,7 +32,7 @@
       {{ end }}
 
       {{ with .Params.translators }}
-        <p class="text-lg text-gray-500 mt-2" style="font-style: italic;">
+        <p class="text-lg text-gray-500 text-left mt-2" style="font-style: italic;">
           Translated by: {{ delimit . ", " }}
         </p>
       {{ end }}
